--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"images/watermelon_slice.png":["images/watermelon_slice.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"packages/line_icons/lib/assets/fonts/LineIcons.ttf":["packages/line_icons/lib/assets/fonts/LineIcons.ttf"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"packages/line_awesome_flutter/lib/fonts/LineAwesome.ttf":["packages/line_awesome_flutter/lib/fonts/LineAwesome.ttf"]}
